--- a/kustomize/postgres/postgres.yaml
+++ b/kustomize/postgres/postgres.yaml
@@ -7,12 +7,14 @@ spec:
   postgresVersion: 13
   instances:
     - name: instance1
+      replicas: 2
       dataVolumeClaimSpec:
         accessModes:
         - "ReadWriteOnce"
         resources:
           requests:
             storage: 1Gi
+        storageClassName: manual1
   backups:
     pgbackrest:
       image: registry.developers.crunchydata.com/crunchydata/crunchy-pgbackrest:centos8-2.33-0
@@ -27,3 +29,4 @@ spec:
             resources:
               requests:
                 storage: 1Gi
+            storageClassName: manual2
