--- a/helm/postgres/templates/postgres.yaml
+++ b/helm/postgres/templates/postgres.yaml
@@ -7,12 +7,14 @@ spec:
   postgresVersion: {{ .Values.postgresVersion }}
   instances:
     - name: instance1
+      replicas: 2
       dataVolumeClaimSpec:
         accessModes:
         - "ReadWriteOnce"
         resources:
           requests:
             storage: 1Gi
+        storageClassName: rook-ceph-block
   backups:
     pgbackrest:
       image: {{ .Values.pgBackRest}}
@@ -27,6 +29,7 @@ spec:
             resources:
               requests:
                 storage: 1Gi
+            storageClassName: rook-ceph-block
       - name: repo2
         volume:
           volumeClaimSpec:
@@ -35,6 +38,7 @@ spec:
             resources:
               requests:
                 storage: 1Gi
+            storageClassName: rook-ceph-block
   proxy:
     pgBouncer:
       image: {{ .Values.pgBouncer}}
