--- a/kustomize/postgres/postgres.yaml
+++ b/kustomize/postgres/postgres.yaml
@@ -61,3 +61,10 @@ spec:
     pgmonitor:
       exporter:
        image: registry.developers.crunchydata.com/crunchydata/crunchy-postgres-exporter:ubi8-5.0.0-0
+
+  #users:
+  #  - name: hello
+  #    databases:
+  #      - hello1
+  #      - hello2
+  #    options: "SUPERUSER"
