--- a/helm/postgres/values.yaml
+++ b/helm/postgres/values.yaml
@@ -1,6 +1,6 @@
 ---
 # Cluster name
-name: hippo
+name: pgo
 
 # PostgreSQL Version
 # Version should match version defined in PostgreSQL images
@@ -10,3 +10,11 @@ postgresVersion: 13
 postgres: registry.developers.crunchydata.com/crunchydata/crunchy-postgres-ha:centos8-13.3-0
 pgBackRest: registry.developers.crunchydata.com/crunchydata/crunchy-pgbackrest:centos8-2.33-0
 pgBouncer: registry.developers.crunchydata.com/crunchydata/crunchy-pgbouncer:centos8-1.15-0
+
+pvcs:
+  instances:
+    storageClassName: postgres-instance
+    storageSize: 5Gi
+  repos:
+    storageClassName: postgres-repo
+    storageSize: 5Gi
